Added register user submission API to the service
