# src/controllers/submission-controllers/getSubmission.controller.js
@@ -1,0 +1,59 @@
+'use strict';
+
+import { convertIdToPrettyString, convertPrettyStringToId, convertToNativeTimeZone, logger } from "common-node-lib";
+import { getSubmissionDtlInfo } from "../../db/index.js";
+import { formatMemory, formatTime } from "../../utils/index.js";
+
+const log = logger('Controller: get-submission-detail');
+
+const getSubmissionDtlById = async(sheetId, submissionId, deletedRecord = false) => {
+    try {
+        log.info('Controller function to fetch the submission detail for provided id process initiated');
+        sheetId = convertPrettyStringToId(sheetId);
+        submissionId = convertPrettyStringToId(submissionId);
+        
+        log.info('Call db query to fetch the requested user submission detail for provided id');
+        let submissionDtl = await getSubmissionDtlInfo(sheetId, submissionId, deletedRecord);
+        if (submissionDtl.rowCount === 0) {
+            log.error('No submission detail found for requested submission id');
+            throw {
+                status: 404,
+                message: 'No submission detail found'
+            };
+        }
+        submissionDtl = submissionDtl.rows[0];
+
+        const responseData = {
+            id: convertIdToPrettyString(submissionDtl.id),
+            languageId: convertIdToPrettyString(submissionDtl.language_id),
+            status: submissionDtl.status,
+            runtimeMsg: submissionDtl.runtime_msg,
+            errorMsg: submissionDtl.error_msg !== null ? JSON.parse(submissionDtl.error_msg) : submissionDtl.error_msg,
+            code: submissionDtl.code,
+            maxMemoConsumption: formatMemory(submissionDtl.max_memory),
+            maxTimeConsumption: formatTime(submissionDtl.max_time),
+            avgMemoConsumption: formatMemory(submissionDtl.avg_memory),
+            avgTimeConsumption: formatTime(submissionDtl.avg_time),
+            startTime: submissionDtl.startTime !== null ? convertToNativeTimeZone(submissionDtl.startTime) : submissionDtl.startTime,
+            endTime: submissionDtl.endTime !== null ? convertToNativeTimeZone(submissionDtl.endTime) : submissionDtl.endTime,
+            submittedAt: submissionDtl.submitted_at
+        };
+        
+        log.success('Requested submission details fetched successfully');
+        return {
+            status: 200,
+            message: 'Submission details found',
+            data: responseData
+        };
+    } catch (err) {
+        if (err.status && err.message) { throw err; }
+        log.error('Error occurred while fetching submission detail for provided id');
+        throw {
+            status: 500,
+            message: 'Error occurred while fetching submission detail',
+            errors: err
+        };
+    }
+}
+
+export { getSubmissionDtlById };
